# rust-ai-agents

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/: ISSUES_V0.2.0.md
.github/workflows/: ci.yml
crates/agents/: Cargo.toml  README.md
crates/agents/src/: agent_tool.rs  approval.rs  approvals.rs  audited_executor.rs  checkpoint.rs  discovery.rs  durable.rs  encrypted_stores.rs  engine.rs  engine_integration_tests.rs  executor.rs  factory.rs  guardrails.rs  handoff.rs  lib.rs  memory.rs  multi_memory.rs  persistence.rs  planning.rs  self_correct.rs  session.rs  sqlite_store.rs  trajectory.rs  vector_store.rs
crates/audit/: Cargo.toml
crates/audit/src/: error.rs  lib.rs  traits.rs  types.rs
crates/audit/src/backends/: async_logger.rs  file.rs  json_file.rs  mod.rs
crates/cache/: Cargo.toml
crates/cache/src/: config.rs  entry.rs  error.rs  lib.rs  memory.rs  redis_backend.rs  traits.rs
crates/cloudflare/: Cargo.toml  README.md  wrangler.toml.example
crates/cloudflare/src/: agent.rs  config.rs  error.rs  http.rs  kv.rs  lib.rs  streaming.rs
crates/cloudflare/worker-template/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  message.rs  message_tests.rs  tool.rs  tool_tests.rs  types.rs  types_tests.rs
crates/crew/: Cargo.toml  README.md
crates/crew/src/: cancellation.rs  coordination.rs  crew.rs  graph.rs  handoff.rs  human_loop.rs  lib.rs  novelty.rs  orchestra.rs  process.rs  rate_limit.rs  restart.rs  streaming.rs  subgraph.rs  task_manager.rs  time_travel.rs  voting.rs  workflow.rs
crates/dashboard/: Cargo.toml  README.md
crates/dashboard/src/: audit.rs  handlers.rs  integration.rs  lib.rs  server.rs  state.rs  streaming.rs  websocket.rs
crates/dashboard/static/: index.html
crates/dashboard/static/studio/: index.html
crates/dashboard/tests/: handlers_test.rs
crates/data/: Cargo.toml
crates/data/src/: cnpj.rs  cpf.rs  crossref.rs  lib.rs  matcher.rs  metrics.rs  name.rs  pipeline.rs  sql.rs  types.rs
crates/dioxus-ai/: Cargo.toml  README.md
crates/dioxus-ai/src/: error.rs  hooks.rs  lib.rs  types.rs
crates/encryption/: Cargo.toml  README.md
crates/encryption/src/: aes_cipher.rs  chacha_cipher.rs  envelope.rs  error.rs  key.rs  lib.rs  stores.rs  traits.rs
crates/fastly/: Cargo.toml
crates/fastly/src/: lib.rs
crates/github-ops/: Cargo.toml
crates/github-ops/src/: main.rs
crates/leptos-ai/: Cargo.toml  README.md
crates/leptos-ai/src/: error.rs  hooks.rs  lib.rs  types.rs
crates/llm-client/: Cargo.toml
crates/llm-client/src/: error.rs  lib.rs  message.rs  provider.rs  request.rs  response.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: agent_handler.rs  bridge.rs  client.rs  error.rs  lib.rs  protocol.rs  server.rs  session_resources.rs  sse_server.rs  transport.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: alerts.rs  cost_tracker.rs  dashboard.rs  lib.rs  prometheus.rs
crates/providers/: Cargo.toml  README.md
crates/providers/src/: anthropic.rs  audited.rs  backend.rs  instrumented.rs  lib.rs  mock.rs  openai.rs  openrouter.rs  rate_limit.rs  retry.rs  router.rs  structured.rs
crates/providers/tests/: mock_backend_test.rs
crates/resilience/: Cargo.toml
crates/resilience/src/: circuit_breaker.rs  lib.rs  rate_limit.rs  retry.rs
crates/studio/: Cargo.toml  README.md  Trunk.toml  build.sh  index.html
crates/studio/src/: lib.rs
crates/studio/src/api/: client.rs  mod.rs  types.rs  websocket.rs
crates/studio/src/components/: charts.rs  layout.rs  message_item.rs  mod.rs  sidebar.rs  status_badge.rs  trace_item.rs
crates/studio/src/pages/: agents.rs  chat.rs  home.rs  metrics.rs  mod.rs  not_found.rs  sessions.rs  settings.rs  traces.rs
crates/tools/: Cargo.toml
crates/tools/src/: crossref.rs  datetime.rs  delegation.rs  encoding.rs  file.rs  lib.rs  macro_tools.rs  math.rs  registry.rs  sql.rs  web.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/examples/browser/: index.html
crates/wasm/examples/react/: ChatComponent.tsx  useWasmAgent.ts
crates/wasm/src/: error.rs  lib.rs  provider.rs  streaming.rs  types.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: error.rs  lib.rs  parser.rs  runner.rs  schema.rs
docs/: ROADMAP.md  approvals.md  backends.md  model-router.md  prometheus-metrics.md  testing.md
examples/: Cargo.toml  advanced_monitoring.rs  benchmark.rs  brazilian_entity_api.rs  data_integration_demo.rs  data_investigator_agent.rs  mcp_agent_server.rs  mcp_integration.rs  mcp_server.rs  mcp_sse_server.rs  multi_agent_crew.rs  simple_agent.rs
scripts/: create_github_issues.json
scripts/issues/: audit_engine_llmbackend.md  docs_approval.md  docs_llm_backend.md  feat_approval_config.md  feat_approval_integration.md  feat_mock_backend.md  feat_terminal_approval.md  feat_test_approval.md  test_approval_integration.md  test_engine_mock.md
