[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/macros",
    "crates/providers",
    "crates/tools",
    "crates/agents",
    "crates/crew",
    "crates/monitoring",
    "crates/data",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Ronaldo Lima"]
repository = "https://github.com/limaronaldo/rust-ai-agents"
homepage = "https://github.com/limaronaldo/rust-ai-agents"
documentation = "https://docs.rs/rust-ai-agents"
readme = "README.md"
keywords = ["ai", "agents", "llm", "multi-agent", "openrouter"]
categories = ["api-bindings", "asynchronous", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# OpenTelemetry
opentelemetry = "0.22"
tracing-opentelemetry = "0.23"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Storage
sled = "0.34"

# Async traits
async-trait = "0.1"

# Futures & Streaming
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
pin-project-lite = "0.2"

# Environment
dotenvy = "0.15"

# Terminal UI
crossterm = "0.28"

# Rate limiting & Retry
governor = "0.6"
backoff = { version = "0.4", features = ["tokio"] }

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# LRU cache
lru = "0.12"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "json", "time", "uuid", "bigdecimal", "chrono"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
