[package]
name = "rust-ai-agents-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
rust-ai-agents-core = { path = "../crates/core" }
rust-ai-agents-providers = { path = "../crates/providers" }
rust-ai-agents-tools = { path = "../crates/tools", features = ["crossref"] }
rust-ai-agents-agents = { path = "../crates/agents" }
rust-ai-agents-crew = { path = "../crates/crew" }
rust-ai-agents-monitoring = { path = "../crates/monitoring" }
rust-ai-agents-data = { path = "../crates/data" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
# API dependencies
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

[[example]]
name = "simple_agent"
path = "simple_agent.rs"

[[example]]
name = "multi_agent_crew"
path = "multi_agent_crew.rs"

[[example]]
name = "advanced_monitoring"
path = "advanced_monitoring.rs"

[[example]]
name = "data_integration_demo"
path = "data_integration_demo.rs"

[[example]]
name = "brazilian_entity_api"
path = "brazilian_entity_api.rs"
