[package]
name = "rust-ai-agents-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rust-ai-agents-core = { path = "../core" }
rust-ai-agents-providers = { path = "../providers" }
rust-ai-agents-tools = { path = "../tools" }
rust-ai-agents-monitoring = { path = "../monitoring" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sled = { workspace = true }
sqlx = { workspace = true }
dashmap = "6.1"
parking_lot = "0.12"
futures = { workspace = true }
