[package]
name = "rust-ai-agents-audit"
version = "0.2.5"
edition = "2021"
description = "Audit logging for AI agents - tool calls, LLM requests, and compliance tracking"
license = "MIT"
repository = "https://github.com/limaronaldo/rust-ai-agents"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["fs", "sync", "time", "io-util", "rt", "macros"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
flate2 = { version = "1.0", optional = true }

[features]
default = []
compression = ["flate2"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3.0"
