[package]
name = "rust-ai-agents-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { workspace = true }
