[package]
name = "rust-ai-agents-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Real-time web dashboard for Rust AI Agents monitoring"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Monitoring types
rust-ai-agents-monitoring = { path = "../monitoring" }

# Agents crate for real data integration
rust-ai-agents-agents = { path = "../agents", optional = true }

# Providers crate for LLM streaming
rust-ai-agents-providers = { path = "../providers", optional = true }

# Core types
rust-ai-agents-core = { path = "../core", optional = true }

# Async streams for SSE
tokio-stream = "0.1"
async-stream = "0.3"

# Time
chrono = { workspace = true }

# Tracing
tracing = { workspace = true }

# UUID for connection IDs
uuid = { workspace = true }

# Futures for stream handling
futures = { workspace = true }

# Synchronization
parking_lot = "0.12"

# Prometheus metrics
metrics-exporter-prometheus = "0.15"

[features]
default = []
agents = ["rust-ai-agents-agents"]
streaming = ["rust-ai-agents-providers", "rust-ai-agents-core"]
