[package]
name = "leptos-ai"
version = "0.1.0"
edition = "2021"
description = "AI hooks for Leptos - chat, completions, and streaming"
license = "Apache-2.0"
authors = ["Ronaldo Lima"]
repository = "https://github.com/limaronaldo/rust-ai-agents"
keywords = ["ai", "leptos", "llm", "chat", "wasm"]
categories = ["api-bindings", "wasm", "web-programming"]

[dependencies]
# Shared LLM client logic
rust-ai-agents-llm-client = { path = "../llm-client" }

# Leptos framework
leptos = { version = "0.8", features = ["csr"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for WASM
gloo-net = { version = "0.6", features = ["http"] }

# Futures and streaming
futures = "0.3"
wasm-streams = "0.4"

# Web APIs
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Window",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Error handling
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
