[package]
name = "rust-ai-agents-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rust-ai-agents-core = { path = "../core" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
governor = { workspace = true }
backoff = { workspace = true }
nonzero_ext = "0.3"
