[package]
name = "rust-ai-agents-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rust-ai-agents-core = { path = "../core" }
rust-ai-agents-monitoring = { path = "../monitoring" }
rust-ai-agents-audit = { path = "../audit", optional = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
governor = { workspace = true }
backoff = { workspace = true }
nonzero_ext = "0.3"
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
pin-project-lite = { workspace = true }
regex = "1.10"
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[features]
default = []
audit = ["rust-ai-agents-audit"]
