[package]
name = "rust-ai-agents-resilience"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Resilience patterns for rust-ai-agents: Circuit Breaker, Retry, Rate Limiting"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrency
parking_lot = "0.12"
dashmap = "6.0"

# Rate limiting
governor = { workspace = true }

# Random for jitter
rand = "0.8"

# Optional: reqwest integration
reqwest = { workspace = true, optional = true }

[features]
default = []
reqwest = ["dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
