[package]
name = "rust-ai-agents-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rust-ai-agents-core = { path = "../core" }
rust-ai-agents-macros = { path = "../macros" }
rust-ai-agents-data = { path = "../data", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
parking_lot = "0.12"
meval = "0.2"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
tracing = { workspace = true }

# Database (optional)
sqlx = { workspace = true, optional = true }

[features]
default = []
postgres = ["sqlx", "rust-ai-agents-data/postgres"]
crossref = ["rust-ai-agents-data"]
